# Linux_ISP_libcamera

./: SIT_README.md  meson.build  meson_options.txt
.github/: palamida.yml
include/libcamera/ipa/: amd.mojom  meson.build
src/ipa/amd/: isp4.cpp  meson.build
src/ipa/amd/data/: meson.build  tuning-amd_isp41_mdev.json  tuning-generic.json
src/libcamera/pipeline/amd/: meson.build
src/libcamera/pipeline/amd/isp4/: isp4.cpp  meson.build
src/libcamera/pipeline/amd/isp4/data/: config-default.yaml  config-isp4-ov05c.yaml  meson.build
